--- a/Tasks_Page/css/style.css
+++ b/Tasks_Page/css/style.css
@@ -556,7 +556,7 @@ ul.breadcrumb li a:hover {
   }
 
   .uncomplete_task_info {
-    width: 100svw;
+    width: 100%;
     padding: 10px;
     /* border: 1px solid red; */
   }
